<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <DUT Name="T_LoggerSendData" Id="{cfd45c35-1ad4-4982-8344-5c37eeb562d9}">
    <Declaration><![CDATA[TYPE T_LoggerSendData :
STRUCT
	fbDataChannel		: FB_LoggerSendDch;
	rDataChannelItem	: T_IdBase_DCH;
	fbFifo				: FB_DataChannelSenderFifo;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>